# OpenMetric

./: Cargo.toml  README.md  overview.txt  proj_structure.txt
data/: TESTCompany2.ret  TEST_seriesD.evnt
data/test/: TEST_seed.evnt  TEST_seed.ret  TEST_seriesD.ret
src/: main 2.rs  main.rs
src/charts/: mod.rs  time_series.rs
src/metrics/: calculators.rs  events.rs  mod.rs  retention.rs
src/routes/: index.rs  mod.rs  websocket.rs
src/templates/: index.html
tools/: .viewignore  generate_test_data.py  tview.py
