[package]
name = "OpenMetric"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-web-actors = "4.0.1"
actix = "0.13.0"  # Add this for Actor and StreamHandler traits
chrono = "0.4"
plotters = "0.3"
plotters-svg = "0.3"
env_logger = "0.9"
log = "0.4"
serde_urlencoded = "0.7"

